# SimpleGraph

./: CMakeLists.txt  Graph.cpp  Graph.h  LICENSE  Node.cpp  Node.h  README.md  main.cpp
